--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     compile files('libs/httpcore-4.3.3.jar')
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/httpclient-4.3.6.jar')
+    compile files('libs/BmobSDK_V3.4.5_1111.jar')
+    compile files('libs/okhttp-2.4.0.jar')
+    compile files('libs/okio-1.4.0.jar')
 }
