--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,25 +22,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity
-            android:name=".activity.LoginActivity"
-            android:theme="@style/Anim_fade">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".activity.LoginActivity"
+            android:theme="@style/Anim_fade"></activity>
         <activity
             android:name=".activity.RegisterActivity"
             android:theme="@style/Anim_fade"
             android:windowSoftInputMode="stateHidden|adjustResize"></activity>
-
         <activity
             android:name=".activity.ForgotPasswordActivity"
+            android:theme="@style/Anim_fade" />
+        <activity
+            android:name=".activity.WelcomeActivity"
             android:theme="@style/Anim_fade"></activity>
+        <activity android:name=".activity.CityChooseActivity"></activity>
     </application>
 
 </manifest>
