--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity"></activity>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:theme="@style/Anim_fade">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,19 +33,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.LoginActivity"
-            android:theme="@style/Anim_fade"></activity>
-        <activity
             android:name=".activity.RegisterActivity"
             android:theme="@style/Anim_fade"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".activity.ForgotPasswordActivity"
             android:theme="@style/Anim_fade" />
         <activity
             android:name=".activity.WelcomeActivity"
-            android:theme="@style/Anim_fade"></activity>
-        <activity android:name=".activity.CityChooseActivity"></activity>
+            android:theme="@style/Anim_fade" />
+        <activity android:name=".activity.CityChooseActivity" />
+        <activity android:name=".activity.MyResumeActivity"></activity>
     </application>
 
 </manifest>
