--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
         <activity
             android:name=".activity.LoginActivity"
             android:theme="@style/Anim_fade">
@@ -43,7 +43,13 @@
             android:name=".activity.WelcomeActivity"
             android:theme="@style/Anim_fade" />
         <activity android:name=".activity.CityChooseActivity" />
-        <activity android:name=".activity.MyResumeActivity"></activity>
+        <activity
+            android:name=".activity.MyResumeActivity"
+            android:theme="@style/Anim_fade"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:name=".activity.ChooseJobActivity"
+            android:theme="@style/Anim_fade"></activity>
     </application>
 
 </manifest>
