--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Anim_fade">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,21 +37,28 @@
         </activity>
         <activity
             android:name=".activity.RegisterActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Anim_fade"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".activity.ForgotPasswordActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Anim_fade" />
         <activity
             android:name=".activity.WelcomeActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Anim_fade" />
-        <activity android:name=".activity.CityChooseActivity" />
+        <activity
+            android:name=".activity.CityChooseActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.MyResumeActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Anim_fade"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".activity.ChooseJobActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Anim_fade"></activity>
     </application>
 
