添加仿美团城市列表

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     compile files('libs/okhttp-2.4.0.jar')
     compile files('libs/okio-1.4.0.jar')
     compile files('libs/universal-image-loader-1.9.4.jar')
+    compile files('libs/pinyin4j-2.5.0.jar')
+    compile files('libs/pinyin4android1.0.jar')
+    compile files('libs/locSDK_3.1.jar')
+    compile files('libs/baidumapapi_v2_1_2.jar')
 }
