--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile files('libs/pinyin4android1.0.jar')
     compile files('libs/locSDK_3.1.jar')
     compile files('libs/baidumapapi_v2_1_2.jar')
+    compile files('libs/BaiduLBS_Android.jar')
 }
