--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/httpclient-4.3.6.jar')
     compile files('libs/BmobSDK_V3.4.5_1111.jar')
-    compile files('libs/okhttp-2.4.0.jar')
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile files('libs/okio-1.4.0.jar')
     compile files('libs/universal-image-loader-1.9.4.jar')
     compile files('libs/pinyin4j-2.5.0.jar')
