添加兼职发布界面，代码未实现，修改后台表结构

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,7 +114,12 @@
             android:name=".activity.CommentActivity"
             android:configChanges="locale"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.MessageActivity"
+        <activity
+            android:name=".activity.MessageActivity"
+            android:configChanges="locale"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.PublishJobActivity"
             android:configChanges="locale"
             android:screenOrientation="portrait"></activity>
     </application>
