准备添加新的加载框

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,10 @@
         <activity
             android:name=".activity.PublishJobActivity"
             android:configChanges="locale"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.JobTypeActivity"
+            android:configChanges="locale"
             android:screenOrientation="portrait"></activity>
     </application>
 
