--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -124,6 +125,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.JobTypeActivity"
+            android:configChanges="locale"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.AllJobActivity"
             android:configChanges="locale"
             android:screenOrientation="portrait"></activity>
     </application>
