--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.longjoy.parttimejob"
-        minSdkVersion 19
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -49,5 +49,5 @@ dependencies {
     compile files('libs/locSDK_3.1.jar')
     compile files('libs/baidumapapi_v2_1_2.jar')
     compile files('libs/BaiduLBS_Android.jar')
-
+    compile files('libs/Bmob_Push_V0.8beta_20160315.jar')
 }
